@@ -1,3 +1,8 @@
+2006-05-22  Derek Price  <derek@ximbiot.com>
+
+	* log_accum.pl (mail_separate_diffs): Include the last diff.
+	(Original patch from Sylvain Beucler <beuc@beuc.net>.)
+
 2006-05-17  Derek Price  <derek@ximbiot.com>
 
 	* log_accum.pl (write_file, append_file): Don't write empty lists.
